--- a/app/globals.css
+++ b/app/globals.css
@@ -17,10 +17,50 @@ body {
     margin-right: auto;
     background: var(--background);
     box-shadow: 0 0 15px 1px rgba(0, 0, 0, .1);
+    line-height: 20px;
+    position: relative;
 }
 
 @layer utilities {
     .text-balance {
         text-wrap: balance;
     }
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.swiper-pagination-bullet {
+    width: 32px;
+    height: 10px;
+    text-align: center;
+    line-height: 20px;
+    font-size: 10px;
+    color: #000;
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.swiper-pagination-bullet-active {
+    color: #fff;
+    background: #007aff;
+    border: 2px
 }
